# raddar

./: .gitignore  .gitmodules  Cargo.toml  README.md
raddar_array/: Cargo.toml  README.md
raddar_array/src/: lib.rs
raddar_array/src/ndarr/: array_ops.rs  lens.rs  mod.rs  ops.rs
raddar_array/src/ndarr/single_ops/: concat.rs  ext.rs  matmul.rs  mod.rs  reshape.rs  where_.rs
raddar_array/src/tensor/: index.rs  mod.rs  ops.rs
raddar_derive/: Cargo.toml
raddar_derive/src/: lib.rs
src/: lib.rs
src/core/: mod.rs  state_dict.rs  tensor.rs  tensor_like.rs
src/core/tensor_like/: mod.rs  tensor_grad.rs  tensor_nn.rs  tensor_ops.rs  tensor_ops_ex.rs  tensor_trans.rs
src/dataset/: dataset.rs  image_dataset.rs  load_external.rs  mod.rs  tensor_dataset.rs
src/models/: alexnet.rs  mod.rs
src/nn/: act_funcs.rs  alexnet.rs  batchnorm.rs  builder_test.rs  conv.rs  densenet.rs  dropout.rs  embedding.rs  layernorm.rs  linear.rs  mod.rs  module.rs  pooling.rs  resnet.rs  sequential.rs  trainer.rs  vgg.rs
src/optim/: adam.rs  cosine_annealing_lr.rs  gradient_descent.rs  mod.rs  optimizer.rs  rms_prop.rs  steplr.rs
src/util/: drop_guard.rs  mod.rs  tensor.rs
tests/: dataset_test.rs  module_test.rs  optim_test.rs  serialize_test.npz  serialize_test.ot  serialize_test.pt  serialize_test.rs  tch_test.rs
