[package]
name = "raddar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.8.0"
anyhow = "1.0.65"
raddar_derive = { version="0.1.0", path = "./raddar_derive" }
derive_builder = "0.11.2"
itertools = "0.10.5"