[package]
name = "raddar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = { path = "./tch-rs" }
anyhow = "1.0.65"
raddar_derive = { version="0.1.0", path = "./raddar_derive" }
derive_builder = "0.11.2"
itertools = "0.10.5"
paste = "1.0.9"
parking_lot = "0.12.1"
serde = "1.0.145"
serde_json = "1.0.87"
rand = "0.8.5"
image = "0.24.4"
walkdir = "2.3.2"
pariter = "0.5.1"
